Fixed minor snags reported by Florian: Collapsable meta items' heads are now high enough to actually hide any content, the service info now works even when the inputDD has no grammar.

--- a/gavo/resources/web/css/gavo_dc.css
+++ b/gavo/resources/web/css/gavo_dc.css
@@ -296,6 +296,7 @@ li.metaItem {
 h4.exploHead {
 	font-weight:bold;
 	font-size:11px;
+	height: 13pt;
 	margin: 0px;
 	padding: 0px;
 	background: none;
